# WorkReady_Python_for_Freelance

./: keep_alive.py  main.py  pyproject.toml  requirements.txt
.github/: labels.json
.github/ISSUE_TEMPLATE/: feature.md  story.md  task.md
error_handling/: error_dict.py  error_message.py
settings/: database_id_list.py  role_id_dict.py  settings_dict.py
src/: assign_instructor_roll.py  change_enrollment_status.py  change_roll.py  change_standard.py  check_beginner.py  collect_progress.py  common.py  delete_logs.py  get_aitemasu_url.py  get_past_messages.py  get_progress_announce.py  logger.py  logger_config.py  mail.py  manage_ticket.py  notion.py
